--- a/admin.html
+++ b/admin.html
@@ -35,12 +35,17 @@
       display: block;
       margin-top: 0.5em;
     }
+    .property-card button {
+      margin-right: 1em;
+    }
   </style>
 </head>
 <body>
   <h1>不動産屋いはら 管理者用編集画面</h1>
 
   <form id="property-form">
+    <input type="hidden" id="edit-index" value="-1" />
+
     <label>物件画像アップロード:
       <input type="file" id="image" accept="image/*" />
     </label>
@@ -65,7 +70,7 @@
       <textarea id="description" rows="4" cols="50"></textarea>
     </label>
 
-    <input type="submit" value="登録して保存" />
+    <input type="submit" value="登録または更新" />
   </form>
 
   <div id="preview"></div>
@@ -75,6 +80,7 @@
     const form = document.getElementById("property-form");
     const preview = document.getElementById("preview");
     const list = document.getElementById("list");
+    const editIndexInput = document.getElementById("edit-index");
 
     // 画像プレビュー
     document.getElementById("image").addEventListener("change", function () {
@@ -88,7 +94,7 @@
       }
     });
 
-    // 登録して保存
+    // 登録または更新
     form.addEventListener("submit", function (event) {
       event.preventDefault();
 
@@ -98,34 +104,36 @@
       const layout = document.getElementById("layout").value;
       const description = document.getElementById("description").value;
       const imageFile = document.getElementById("image").files[0];
+      const editIndex = parseInt(editIndexInput.value);
 
-      if (!imageFile) {
-        alert("画像を選択してください");
-        return;
-      }
-
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        const property = {
-          name,
-          price,
-          location,
-          layout,
-          description,
-          image: e.target.result
-        };
-
-        // 保存（ローカルストレージ）
+      const saveProperty = (imageData) => {
+        const property = { name, price, location, layout, description, image: imageData };
         const saved = JSON.parse(localStorage.getItem("properties") || "[]");
-        saved.push(property);
-        localStorage.setItem("properties", JSON.stringify(saved));
 
-        // 表示更新
+        if (editIndex >= 0) {
+          saved[editIndex] = property;
+        } else {
+          saved.push(property);
+        }
+
+        localStorage.setItem("properties", JSON.stringify(saved));
         displayProperties();
         form.reset();
         preview.innerHTML = "";
+        editIndexInput.value = -1;
       };
-      reader.readAsDataURL(imageFile);
+
+      if (imageFile) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          saveProperty(e.target.result);
+        };
+        reader.readAsDataURL(imageFile);
+      } else {
+        const saved = JSON.parse(localStorage.getItem("properties") || "[]");
+        const existingImage = editIndex >= 0 ? saved[editIndex].image : "";
+        saveProperty(existingImage);
+      }
     });
 
     // 一覧表示
@@ -141,13 +149,39 @@
             <strong>間取り:</strong> ${p.layout}<br>
             <strong>説明:</strong> ${p.description}<br>
             <img src="${p.image}" alt="物件画像">
+            <button onclick="editProperty(${index})">編集</button>
+            <button onclick="deleteProperty(${index})">削除</button>
           </div>
         `;
       });
     }
+
+    // 編集機能
+    window.editProperty = function(index) {
+      const saved = JSON.parse(localStorage.getItem("properties") || "[]");
+      const p = saved[index];
+      document.getElementById("property_name").value = p.name;
+      document.getElementById("price").value = p.price;
+      document.getElementById("location").value = p.location;
+      document.getElementById("layout").value = p.layout;
+      document.getElementById("description").value = p.description;
+      preview.innerHTML = `<h2>画像プレビュー</h2><img src="${p.image}" alt="物件画像" style="max-width:300px;">`;
+      editIndexInput.value = index;
+    };
+
+    // 削除機能
+    window.deleteProperty = function(index) {
+      if (confirm("この物件を削除しますか？")) {
+        const saved = JSON.parse(localStorage.getItem("properties") || "[]");
+        saved.splice(index, 1);
+        localStorage.setItem("properties", JSON.stringify(saved));
+        displayProperties();
+      }
+    };
 
     // 初期表示
     displayProperties();
   </script>
 </body>
 </html>
+
