--- a/admin.html
+++ b/admin.html
@@ -54,7 +54,7 @@
       <input type="text" id="property_name" required />
     </label>
 
-    <label>価格（円）:
+    <label>賃料（円）:
       <input type="number" id="price" required />
     </label>
 
