--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
 </main>
 <footer>
-    <p>&copy; 2025 不動産屋いはら　with エリン. All rights reserved.</p>
+    <p>&copy; 2025 不動産屋いはらwith エリン🍄. All rights reserved.</p>
 </footer>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
