--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
     </section>
 </main>
 <footer>
-    <p>&copy; 2025 不動産屋いはらwith エリン🍄. All rights reserved.</p>
+   <p>
+  &copy; 2025 不動産屋いはらwith 
+  <img src="img/erin-icon.png" alt="エリンマーク" id="erinIcon" style="width:20px; vertical-align:middle; cursor:pointer;">. 
+  All rights reserved.
+</p>
+
+
 </footer>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
