🍄絵文字表示の修正

--- a/index.html
+++ b/index.html
@@ -100,12 +100,7 @@
     </section>
 </main>
 <footer>
-   <p>
-  &copy; 2025 不動産屋いはらwith 
-  <img src="img/erin-icon.png" alt="エリンマーク" id="erinIcon" style="width:20px; vertical-align:middle; cursor:pointer;">. 
-  All rights reserved.
-</p>
-
+   <p>© 2025 不動産屋いはら with エリン🍄. All rights reserved.</p>
 
 </footer>
 <script>
