Add target attribute to contact link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 どうぞよろしくお願いいたします
             </span>
         </p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1r_bKCZREyPeH9CyX8f9sglQ6ZdUBf2zkZ4xjFwP-d6XViw/viewform?usp=sf_link">お問い合わせはこちら</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1r_bKCZREyPeH9CyX8f9sglQ6ZdUBf2zkZ4xjFwP-d6XViw/viewform" target="_blank">お問い合わせはこちら</a>
+お問い合わせはこちら</a>
 
         <iframe src="wall-measure.html#tatami" width="100%" height="420" style="border:1px solid #ccc; margin-top:30px;"></iframe>
     </section>
