--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIauQnbCb4rmHzhbpYbt8mLtvI6sNTTmJ5lkobab7w5b6r8w/viewform" target="_blank" style="padding:10px 20px; background:#004d99; color:white; text-decoration:none; border-radius:5px;">お問い合わせはこちら</a>
 
-
+<p><a href="https://forms.gle/dWPHDoL3NBtb7CAA9">問い合わせ</a></p>
         <iframe src="wall-measure.html#tatami" width="100%" height="420" style="border:1px solid #ccc; margin-top:30px;"></iframe>
     </section>
 
