Fix anchor tag for contact link in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 どうぞよろしくお願いいたします
             </span>
         </p>　　　　
-        <p><a>< "https://forms.gle/gUMfMim7Ra7pyuwT7 "><お問い合わせ</a></p>
+        <p><a href="https://forms.gle/gUMfMim7Ra7pyuwT7">お問い合わせ</a></p>
+
         <iframe src="wall-measure.html#tatami" width="100%" height="420" style="border:1px solid #ccc; margin-top:30px;"></iframe>
     </section>
 
