--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,11 @@
             <div id="cutResult"></div>
         </div>
     </section>
+    <section>
+  <h2>画像読み込みテスト</h2>
+  <input type="file" id="imageInput" accept="image/jpeg,image/png" />
+  <canvas id="canvas" style="max-width:100%; border:1px solid #ccc; margin-top:10px;"></canvas>
+  </section>
 </main>
 <footer>
    <p>© 2025 不動産屋いはら with エリン🍄. All rights reserved.</p>
@@ -140,7 +145,7 @@
             };
         }
     });
-fetch("properties.json")
+fetch("data/properties.json")
   .then(res => res.json())
   .then(data => {
     const container = document.querySelector(".property-list");
