WIP: 整理中の変更

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <title>不動産屋いはらのホームページ</title>
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
     header { background-color: #004d99; color: white; padding: 20px 0; text-align: center; }
@@ -30,6 +31,7 @@
   <nav>
     <a href="index.html">ホーム</a>
     <a href="index.html#properties">物件一覧</a>
+    <a href="static/cut-panel.html">切断パネルへ</a>
   </nav>
   <main>
     <section id="properties">
